# STDISCM_P3

./: .gitignore  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_REFACTOR.md  CMakeLists.txt  HOW_IT_WORKS.md  REACT_ARCHITECTURE.md  README.md  STDISCM_P2.cpp  STDISCM_P3.cpp  STDISCM_P3.h  STYLE_GUIDE.md  TESTING.md  TETRIS_README.md
docs/: JS_CPP_SIDE_BY_SIDE.md  PROMISE_PATTERN.md  bundle.txt
examples/: PromiseExample.cpp
scripts/: bundler.ps1
src/: AGameObject.cpp  AGameObject.h  BGEntity.cpp  BGEntity.h  BGObject.cpp  BGObject.h  BaseRunner.cpp  BaseRunner.h  EntityManager.h  FPSCounter.cpp  FPSCounter.h  GameEntity.cpp  GameEntity.h  GameEntityManager.cpp  GameEntityManager.h  GameObjectManager.cpp  GameObjectManager.h  GameSystem.h  IETThread.cpp  IETThread.h  IGameSystem.h  IconEntity.cpp  IconEntity.h  IconObject.cpp  IconObject.h  IconSpawnerSystem.cpp  IconSpawnerSystem.h  README.md  StreamingThread.cpp  SystemManager.cpp  SystemManager.h  TextureDisplay.cpp  TextureDisplay.h  TextureManager.cpp  TextureManager.h  ThreadPool.cpp  ThreadPool.h  main.cpp
src/app/: BaseRunner.cpp
src/components/: BackgroundComponent.h  EnemyComponent.h  GameComponent.h  GameState.h  HUDComponent.h  PlayerComponent.h
src/components/core/: AGameObject.cpp
src/components/ui/: FPSCounter.h  (+3 more)
src/core/: AssetManager.cpp  AssetManager.hpp  BaseRunner.cpp  Component.h  EffectManager.h  Engine.h  Entity.h  Entity.hpp  Game.h  Game.hpp  ReactSFMLEngine.h  Reconciler.h  RenderNode.h  Scene.h  Scene.hpp  StateManager.h  Store.h
src/entities/: BGEntity.cpp  BGEntity.h  Board.hpp  Enemy.hpp  FPSCounter.hpp  FPSEntity.cpp  FPSEntity.h  GameOverText.hpp  HoldBoxPreview.hpp  HoldPiecePreview.hpp  IconEntity.cpp  IconEntity.h  IconScrollDisplay.hpp  LoadingProgressBar.hpp  MenuText.hpp  NextPiecePreview.hpp  Player.h  Player.hpp  PressEnterText.hpp  ScoreText.hpp  TetrisScoreText.hpp  Tetromino.hpp
src/managers/: EntityManager.cpp  EntityManager.h  SystemManager.h  TextureManager.cpp  TextureManager.h
src/scenes/: GameOver.hpp  GameOverScene.h  GameOverScene.hpp  GamePlay.hpp  GamePlayScene.h  GamePlayScene.hpp  MainMenu.hpp  MainMenuScene.h  MainMenuScene.hpp  TetrisScene.hpp
src/systems/: IconSpawnerSystem.cpp  IconSpawnerSystem.h
src/threading/: StreamingThread.cpp  StreamingThread.h  TaskQueue.h  ThreadPool.cpp  ThreadPool.h
src/utils/: FPSCounter.cpp  FPSCounter.h  IETThread.hpp  Promise.h  PromiseUtils.h  StringUtils.cpp  StringUtils.h  TaskQueue.hpp  TetrominoShapes.hpp  ThreadPool.hpp
src_old/: LoadAssetThread.h  TextureDisplay.cpp  TextureManager.cpp
src_v0-DefaultWorkbench/: TextureDisplay.cpp  TextureManager.cpp
src_v1-JustWindow/: BaseRunner.cpp  README.md
src_v10-Full_Original/: AGameObject.cpp  BaseRunner.cpp  IETThread.h  IconObject.cpp  README.md  SimpleFPSCounter.cpp  StreamingThread.cpp  StreamingThread.h  TextureDisplay.cpp  TextureManager.h  ThreadPool.cpp
src_v2-AddGameObjectManager/: AGameObject.cpp  AGameObject.h  BaseRunner.cpp  BaseRunner.h  GameObjectManager.cpp  README.md  SimpleCircle.cpp
src_v3-AddFPSCounter/: AGameObject.cpp  BaseRunner.cpp  README.md  SimpleCircle.cpp  SimpleCircle.h  SimpleFPSCounter.cpp
src_v4-BGObject/: BaseRunner.cpp  GameObjectManager.h  README.md  SimpleFPSCounter.cpp  TextureManager.cpp  TextureManager.h
src_v4.5-TextureManager/: BGObject.h  BaseRunner.cpp  README.md  SimpleFPSCounter.cpp  TextureManager.cpp
src_v5-IconObject_Grid/: AGameObject.cpp  AGameObject.h  BGObject.cpp  BaseRunner.cpp  GameObjectManager.cpp  README.md  SimpleFPSCounter.cpp  StringUtils.h  TextureDisplay.cpp  TextureDisplay.h  TextureManager.cpp  TextureManager.h
src_v6-Threading_Basic/: AGameObject.cpp  BGObject.cpp  BaseRunner.cpp  IconObject.h  README.md  SimpleFPSCounter.h  TextureDisplay.cpp  TextureManager.cpp
src_v7-Thread_Sync/: AGameObject.cpp  BGObject.cpp  BaseRunner.cpp  GameObjectManager.cpp  IconObject.cpp  README.md  SimpleFPSCounter.cpp  StringUtils.cpp  TextureDisplay.cpp  TextureDisplay.h  TextureManager.cpp  TextureManager.h
src_v8-Thread_Pool/: BaseRunner.cpp  TextureDisplay.h  TextureManager.cpp
src_v9-Optimizations/: BaseRunner.cpp  GameObjectManager.cpp  IETThread.cpp  README.md  StringUtils.cpp  TextureDisplay.cpp  ThreadPool.h
(+28 files in other folders)
